# ChangeLog for net-analyzer/icinga2
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/icinga2/ChangeLog,v 1.3 2014/07/17 03:05:42 prometheanfire Exp $

*icinga2-2.0.1 (17 Jul 2014)

  17 Jul 2014; Matthew Thode <prometheanfire@gentoo.org> +icinga2-2.0.1.ebuild:
  bup

*icinga2-2.0.0 (16 Jun 2014)

  16 Jun 2014; Matthew Thode <prometheanfire@gentoo.org> +icinga2-2.0.0.ebuild,
  -icinga2-2.0.0_beta2.ebuild:
  BUP!

*icinga2-2.0.0_beta2 (15 Jun 2014)

  15 Jun 2014; Matthew Thode <prometheanfire@gentoo.org>
  +icinga2-2.0.0_beta2.ebuild, +metadata.xml:
  adding icinga2