@@ -9,6 +9,6 @@ LICENSE=GPL-2
 RDEPEND=dev-util/cmake dev-libs/openssl dev-libs/boost sys-devel/bison sys-devel/flex mysql? ( virtual/mysql ) postgres? ( dev-db/postgresql-base ) plugins? ( net-analyzer/nagios-plugins ) classicui? ( net-analyzer/icinga[web] ) apache2? ( =www-servers/apache-2* )
 REQUIRED_USE=|| ( mysql postgres )
 SLOT=0
-SRC_URI=http://github.com/Icinga/icinga2/archive/v2.0.0.tar.gz -> icinga2-2.0.0.tar.gz
+SRC_URI=http://github.com/Icinga/icinga2/archive/v2.0.2.tar.gz -> icinga2-2.0.2.tar.gz
 _eclasses_=cmake-utils	da2974fcb060ec927e93a17c835afa67	depend.apache	1a38534d3f755d1ab1d92ce120bd7dbd	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=17b63839aec08a7530d587e16df3ea9a
+_md5_=f4f5bc8dedd5482251347c686488e647
