@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install postinst setup
+DEPEND=dev-libs/libdaemon selinux? ( sec-policy/selinux-radvd ) dev-libs/check sys-devel/bison sys-devel/flex virtual/pkgconfig virtual/pkgconfig
+DESCRIPTION=Linux IPv6 Router Advertisement Daemon
+EAPI=4
+HOMEPAGE=http://v6web.litech.org/radvd/
+IUSE=kernel_FreeBSD selinux
+KEYWORDS=~amd64 ~arm ~hppa ~ppc ~sparc ~x86 ~x86-fbsd
+LICENSE=BSD
+RDEPEND=dev-libs/libdaemon selinux? ( sec-policy/selinux-radvd )
+SLOT=0
+SRC_URI=http://v6web.litech.org/radvd/dist/radvd-2.5.tar.gz
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=a5428c8fffec9dc43a414340d0c8f5c3
