@@ -7,17 +7,27 @@ AUX radvd.service 356 SHA256 72ead1c1da904a1e890de37fe8976304d69c4cd60fc528641f0
 DIST radvd-1.15.tar.gz 185528 SHA256 ba2e16bf0b2ac0030aacb0927304603f7ebbd317fdf30a24ee6f9ba06428391d SHA512 39d7ad22b25b36ab8079e9a48f50f69ea2be8a02d2e76638940c5eb769bf9291f28d275d7799296009e3c61bcb106c276bc5c60c9090951ea9f2dc7e00945ba7 WHIRLPOOL 3620518e71a243335cf8e064b4f3c45d80ec2e2d94748caa8ccaf3e0f317ffb3244ae719f07008abd65763f3ebc0110e2d5d5f570f1569b8377f70e0a9dfecc4
 DIST radvd-1.9.8.tar.gz 176288 SHA256 645ccf1c9b16e769ff4179813712e580e2c8786d64a888d8afa1e296c057c1c1 SHA512 25ffa2fe1289ee826432ade3846aa5008e34ff9f0cbe954bf44ebae22198de59b40b7b4a70d19c74117b3280a7ca6a4bf740536f4a08e0bf169e760748548971 WHIRLPOOL 228182cb6fdc6065a728f679ee6d93286c48f186b209b6ff8d553f06317d0e799687c5abf0179cda5c42d2ca72ca32bdacbc31e0a14a06d18316a6538eb09017
 DIST radvd-2.3.tar.gz 200688 SHA256 d48e1262f57deeef8939d1a1b33a31e52bde754b367a55012dcf77d538d1c834 SHA512 e64b9e28b27e965f756475d0a96a6910be7d078f01d07c8d94b0003921f5a8eccf354d643a2fbb576c79ef720074e75b6454d9fb000d0811ebe9df4dae5d3c31 WHIRLPOOL 8f9710644198bd59a2049787b75733334da0c2402f12a2da67120b7c2434a0fc4185f12531694f95b7808cd08ee8e7b3d0dbbfb2385200a988b748c39c3b3a5c
+DIST radvd-2.5.tar.gz 201436 SHA256 942fb19342390045019f168535eadda268010df4dc9534fd46adc1a858418e1e SHA512 f1ff5bb3ae37dad76fce5937d2101cb88fa12938b8ceb950f22f7f5c5b7d1565a52ca0527892fe279ac7c0540d26652c2634f6aa674396efe6d7836dbbf4574f WHIRLPOOL cba6f12c2df48b32d21cc664e5e06a7a3958e29f141700f3b0774664746583639eecb50eb56440e64ab9ece5cf8b8d167032a277c7b03d2a7acabde26dfdef85
 EBUILD radvd-1.15.ebuild 1655 SHA256 2448ea641c091d1bd6ad9fe9cab60aceeb5c081f8521835bf2f6270c3196eeb0 SHA512 18f98d52187b206febb28444e4cfe01a441f7a3cd3e53d64e0932af5ea830176be1189699c7259450256fef8e2814adc7f5be4af33a654161355bb24ce2df5ea WHIRLPOOL 0ab296ae89d6bbb40235b2a6a072e8c3e60d6952a16e46d9ab8571abbb5783e85c7d71969e6e5cae54de9e67ef3a4398077419ec3d4d57c30c21e217185348b4
 EBUILD radvd-1.9.8.ebuild 1621 SHA256 150a4296e662ca89c5181256fd978df42d01ba9f2af2104bd5fd5f17fe6e5bcc SHA512 acda29962cc16d3d2bc9716ae41ed6295741487b5b195cda1e8d0733bfe3c974fd97090b5793defd66417e85bff84990258f96103073d0ed1ef2365999f0521e WHIRLPOOL f2cd282bf328347b97a7cd21e025f24146dc173ce0b9724da5f66d1954481edff6b5b4a7d958c029ec8eaff0635f93d7636a2f332c35b1897250239c5336d995
 EBUILD radvd-2.3.ebuild 1668 SHA256 140cfdac2b025aca038c05593f061b33e41af50acaf41373441e0088fa34d641 SHA512 53c031779de5dee61b3c4af3b22643fc8313419046521aa20421f9a4c5ba41ffc0949894587917e2b0c6a18127b0a739eea827d64f23b3102620d3878331d212 WHIRLPOOL 45dbb050e9c056aaf2a53e231fac931279193c81461454c619ff36460741dc922b68e9efcb5a62967c814d61cd152b8bf074ebc4a50d7dc536452d46980e8257
-MISC ChangeLog 15783 SHA256 27712f5d8f6b4126b37cd72fc151a2f8e0944d668da0f94ceef7508279ea8b33 SHA512 bba648f32b00d3965a92fd74d640249fd81292efc88a7a9d9e5de895116953167b585fe3ad340cf0dc14532ec9b4248d2dc1bd2c1fa467d026df2a22f9497877 WHIRLPOOL da7e65aea9620e1e68da8612f26d38c6bee6d6a861cfb2c2df53971731bc3084d6b1c08a8ecaf9811ee505bce35eb7a06a9ae4c37e8c29bca2b6418fbada3d3d
+EBUILD radvd-2.5.ebuild 1679 SHA256 3e34e5cc0b1ad6c284f55acb41db85e952380cc71e0573820b9257b3039155f8 SHA512 8078065b578bdb8efe309ab92cafd1a4e03e0fde4a1f6c438c14c411c30813f08e078ae19437c8249f6720b9068d6f80cffc8de82bc55951d17a4ec8a569ac16 WHIRLPOOL 3521f9fc331ee0688c59236ecaaca31a542fee6286f71f806a4068be4ff96c527fac8aecca7baff3ec2b653a368ae47db712543fbb2b26cf0ea1090a42996f12
+MISC ChangeLog 15952 SHA256 1bf6d43b2c1838ca71dfe5c1ef6817578d39503a79b528bb9500752fb3c3fd8f SHA512 e3f05ee725cfd4bc1be65d79db8cf56cd3c0974282eb4d2e5f11cfa553962ef073f00a156ddc4c64d63c050fc74c409fd27537e8cd31de71451662e6dfa96d9d WHIRLPOOL 1481b471d5dc2bb9eda0a1f86901855ba13be5d6795b21307cd1fdc24d069ce5cd3629eea153d16ba9c7e4a271be2f039027188002f39c25813903beb8526185
 MISC metadata.xml 330 SHA256 40f8466e0dfb2770a66eddc657185e34a39dc389419a758b183a1d229a47e0bd SHA512 e8bdd24745abdcf8129f8fae83b8397bc762ae1cc1010b271a7f5647eed8ccf65a15f7b761d32fb250676a3e081dbe3395fc82934276b73c5595b35ff2e8da80 WHIRLPOOL 2ec6a85e151014a9156007b3e9fc9d3b43aa43dcbd59aeec6de21c94df4e2a4e1b65fc828905c57a62b06ace6aaf1b3cd23e314426d4a0a719b1f61bfccd5ea9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iL4EAREIAGYFAlPZbelfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldDY3QjA4MzdGODg1NUMxMjIzNUQ0MDgxNzky
-N0FERDBDNjJFRUYwOTAACgkQknrdDGLu8JDB5gD9HeYIQWer6TMucqhR8jk4u7Up
-1OXdAMxmQK2YPC/3OBcA/1Y/+yQfqu7aWikQnalXpzDsblTyTe87m6zpmLp3LEmM
-=7UTz
+iQIcBAEBCAAGBQJT9sjuAAoJECRx6z5ArFrDikwQAI3IEU0iugwX1bZIOrm+ZkDc
+3wYyVl7rYYXzqa8WsBYHEjqHeuRFQy/uIM3OhPO5ZIsdzS7vBZ1xKYZn5bpuHFq2
+/XfvxO9NTr5jJ/eOO/dbuh9fqtpnu9XPgvjxzO1dqiCIJwWOzKKl9pmeG8vxuB7S
+Hs/TTsvPieLuzmfxOyWymUPhjIDJqXQyMC3Uno1ZXSYXC4wyZNbLkoZHgEZ7y3zt
+w8D7JwnJ9Pt3aK+tVR5ZLtbHyyypJaGrTDxR1fMB54OzJcv0GoDtfY/Wg+zVx3Wx
+IJtAj5Xbeb/30bQLCNCk0WV0YePAQ5F23MEPGzGodabkgG0Z1ooV3k51v9YG1IdV
+ZgpC5BHBGoAhSIada1+HUOb2t8Mw3nncCi7It+WISjZ9jET1KM2jIY+wQ9NcZHL0
+2xmIZYBvIeq3EzXMpCjomJNohXHY1aG+cbEXSwgbwfxuADuSaHEV/7TtPVIyOMMu
+6OWJ4UKTrkOV52j1ZlrMsO1soeItnCTCLOj2CnopRGRaDM0mYNhTzCuzUkWn1KgY
+uesG3OpM26qwOuuVmjNv5WG1lycyQji0qu19PgLvC73J13Oc7Vwx/fRKufkExJsp
+yL4M+10AKrzxoha+dgluf1SIb1yUFE8gCxXlA//80MBZsVU0g4JX73SVScj4DJuk
+nmF1oAeJWrsLi/X3sz5l
+=hY4A
 -----END PGP SIGNATURE-----
