@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/icinga2
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/icinga2/ChangeLog,v 1.3 2014/07/17 03:05:42 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/icinga2/ChangeLog,v 1.4 2014/08/22 05:27:00 prometheanfire Exp $
+
+*icinga2-2.0.2 (22 Aug 2014)
+
+  22 Aug 2014; Matthew Thode <prometheanfire@gentoo.org> +icinga2-2.0.2.ebuild,
+  -icinga2-2.0.0.ebuild:
+  bup
 
 *icinga2-2.0.1 (17 Jul 2014)
 
